--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "12.yelpcamp",
+  "name": "yelpcamp",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "M.R",
   "license": "ISC",
