--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ CLOUDINARY_KEY = 914162282926729
 CLOUDINARY_SECRET = UGDMLuFGGQjZh-mA4dzHyQmaWbA
 
 
-MAPBOX_TOKEN =pk.eyJ1IjoibS1yMiIsImEiOiJja3RmZzRjem4wN3hzMnpxbjVldDdnbjV2In0.UtVBrq_PLa_N2GslMQ6-sw
+MAPBOX_TOKEN = pk.eyJ1IjoibS1yMiIsImEiOiJja3RmZzRjem4wN3hzMnpxbjVldDdnbjV2In0.UtVBrq_PLa_N2GslMQ6-sw
 
-SECRET = 
+SECRET = 61CF2DFBAABF46E1D43D599C7AA6E;
 
 DB_URL = mongodb+srv://YelpUser:RHOMfGSPCvoueNML@campground.qc3xr.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
